fix backface visibility

--- a/src/scss/components/app/_icon-block.scss
+++ b/src/scss/components/app/_icon-block.scss
@@ -132,6 +132,7 @@
     position: relative;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    transform: translate3d(0,0,0);
   }
 
   &__back {
@@ -142,7 +143,7 @@
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) translate3d(0,0,0);
     background: #fff;
     border: 1px solid $black;
   }
